image source updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </style>
 </head>
 <body>
-	<img src="../../../Pictures/ZENITH-Logo-90k.png" width="100%" alt=""/>
+	<img src="assets/ZENITH-Logo-90k.png" alt="" width="100%" />
 	
 	<br>
 	<model-viewer src="assets/MR_Epic.gltf" 
