Fixed missing font

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 <style type="text/css">
 @import url("styles.css");
 </style>
+<link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<img src="assets/ZENITH-Logo-90k.png" alt="" width="100%" />
+	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="100%" />
 	
 	<br>
 	<model-viewer src="assets/MR_Epic.gltf" 
@@ -50,9 +51,7 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
-<br>
-	<p> </br>
-	  </br>
-	  EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://jonathan-bryant.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'"> <br>
+    EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://jonathan-bryant.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
