--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="732" />
+	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" />
 	
 	<br>
 	<model-viewer src="assets/MR_Epic.gltf" 
