--- a/epic-plus.html
+++ b/epic-plus.html
@@ -41,40 +41,17 @@
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" />
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" /></a>
 	
 	<br>
-<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
-                ios-src="assets/ZenithVR_Logo_3D.usdz"
+	<model-viewer src="assets/MR_Epic.gltf" 
+                ios-src="assets/MR_Epic.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
-<p style="font-family: 'Futura Bold font'"> <br>
-  </p>
-<table width="375" border="0" align="center">
-  <tbody>
-    <tr>
-      <td width="50%" align="center"><p style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
-  EPIC PLUS</p></td>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
-    </tr>
-    <tr>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
-    </tr>
-    <tr>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
-    </tr>
-  </tbody>
-</table>
-
+	<p style="font-family: 'Futura Bold font'"> <br>
+    EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://jonathan-bryant.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
