--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
 	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" />
 	
 	<br>
-<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
+<div class="container" style="width: 375; height: 275; align-self: center">
+	<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
                 ios-src="assets/ZenithVR_Logo_3D.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
-<p style="font-family: 'Futura Bold font'"> <br>
-  </p>
+	</div>
+
 <table width="375" border="0" align="center">
   <tbody>
     <tr>
