JAC Side Architectural Added
also fixed broken links due to domain change

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 <table width="375" border="0" align="center">
   <tbody>
     <tr>
-      <td width="50%" align="center"><p style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
+      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
   EPIC PLUS</p></td>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
+      <td align="center"><img src="assets/images/JAC Architectural Side.jpg" width="164" height="123" alt=""/><br>
+      <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
     </tr>
     <tr>
       <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
