--- a/epic-plus.html
+++ b/epic-plus.html
@@ -52,6 +52,6 @@
                 shadow-intensity="1" 
                 alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
 	<p style="font-family: 'Futura Bold font'"> <br>
-    EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://jonathan-bryant.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+    EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
