--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <tr>
       <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
   EPIC PLUS</p></td>
-      <td align="center"><img src="assets/images/JAC Architectural Side.jpg" width="164" height="123" alt=""/><br>
+      <td align="center"><a href="jac-side-architectural.html"><img src="assets/images/JAC Architectural Side.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
     </tr>
     <tr>
