--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZENITH Interiors - Epic Plus - Model Viewer</title>
+  <title>ZENITH Interiors - AR Portal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -63,8 +63,8 @@
       <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
     </tr>
     <tr>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
+      <td align="center"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/><br>
+        <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
       <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
       <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
     </tr>
