--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
     </tr>
     <tr>
-      <td align="center"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/><br>
+      <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
         <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
       <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
       <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
