Updating site size for various devices

--- a/belite-drafting.html
+++ b/belite-drafting.html
@@ -36,14 +36,16 @@
   <!--<script src="https://unpkg.com/@magicleap/prismatic@0.18.2/prismatic.min.js"></script>-->
 
 <style type="text/css">
-@import url("styles.css");
 </style>
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
+<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" /></a>
+	<div id="content">
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height=50vh align="middle" /></a>
 	
 	<br>
+	<div id="ar-content">
 	<model-viewer src="assets/BeLite_Drafting_Chair.gltf" 
                 ios-src="assets/BeLite_Drafting_Chair.usdz"
                 ar
@@ -51,7 +53,9 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a chair" background-color="#70BCD1"> </model-viewer>
+	</div>
 	<p style="font-family: 'Futura Bold font'"> <br>
     BELITE DRAFTING CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/BeLite_Drafting_Chair.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+		</div>
 </body>
 </html>
