--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+	<div id="content">
 	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" />
 	
 	<br>
@@ -76,6 +77,6 @@
     </tr>
   </tbody>
 </table>
-
+</div>
 </body>
 </html>
