AR viewer scales to browser

--- a/belite-drafting.html
+++ b/belite-drafting.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 	<div id="content">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height=50vh align="middle" /></a>
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width=320px align="middle" /></a>
 	
 	<br>
 	<div id="ar-content">
