--- a/belite-drafting.html
+++ b/belite-drafting.html
@@ -41,8 +41,7 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="content">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width=320px align="middle" /></a>
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height="10vh" align="middle" /></a>
 	
 	<br>
 	<div id="ar-content">
@@ -56,6 +55,5 @@
 	</div>
 	<p style="font-family: 'Futura Bold font'"> <br>
     BELITE DRAFTING CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/BeLite_Drafting_Chair.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
-		</div>
 </body>
 </html>
