--- a/belite-drafting.html
+++ b/belite-drafting.html
@@ -41,8 +41,9 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height="10vh" align="middle" /></a>
-	
+	<div id="header">
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
+	</div>
 	<br>
 	<div id="ar-content">
 	<model-viewer src="assets/BeLite_Drafting_Chair.gltf" 
@@ -53,7 +54,7 @@
                 shadow-intensity="1" 
                 alt="A 3D model of a chair" background-color="#70BCD1"> </model-viewer>
 	</div>
-	<p style="font-family: 'Futura Bold font'"> <br>
+	<p style="font-family: 'Futura Bold font'">
     BELITE DRAFTING CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/BeLite_Drafting_Chair.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
