Added Kissen, updated all viewers to new page that scales to screen size

--- a/jac-side-architectural.html
+++ b/jac-side-architectural.html
@@ -36,14 +36,14 @@
   <!--<script src="https://unpkg.com/@magicleap/prismatic@0.18.2/prismatic.min.js"></script>-->
 
 <style type="text/css">
-@import url("styles.css");
 </style>
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
+<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" /></a>
-	
-	<br>
+	<div id="header">
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height ="100%" align="middle" /></a>
+	</div>
 	<model-viewer src="assets/MR_Jac_Side_Architectural.gltf" 
                 ios-src="assets/MR_Jac_Side_Architectural.usdz"
                 ar
@@ -51,7 +51,6 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a chair" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'"> <br>
-    JAC SIDE ARCHITECTURAL CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/MR_Jac_Side_Architectural.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'">JAC SIDE ARCHITECTURAL CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/MR_Jac_Side_Architectural.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
