--- a/epic-plus.html
+++ b/epic-plus.html
@@ -41,9 +41,9 @@
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" /></a>
-	
-	<br>
+    <div id="header">
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height ="100%" align="middle" /></a>
+	</div>
 	<model-viewer src="assets/MR_Epic.gltf" 
                 ios-src="assets/MR_Epic.usdz"
                 ar
@@ -51,7 +51,6 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'"> <br>
-    EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'"> EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
