--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@
   <!--<script src="https://unpkg.com/@magicleap/prismatic@0.18.2/prismatic.min.js"></script>-->
 
 <style type="text/css">
-@import url("styles.css");
 </style>
+<link href="styles.css" rel="stylesheet" type="text/css">
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="content">
-	<img src="assets/images/ZENITH-Logo-90k.png" alt="" width="375" align="middle" />
-	
+	<div id="header">
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height ="100%" align="middle" /></a>
+	</div>
 	<br>
-<div class="container" style="width: 375; height: 275; align-self: center">
 	<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
                 ios-src="assets/ZenithVR_Logo_3D.usdz"
                 ar
@@ -53,7 +52,6 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
-	</div>
 
 <table width="375" border="0" align="center">
   <tbody>
