Zenith logo scale correctly

--- a/belite-drafting.html
+++ b/belite-drafting.html
@@ -41,10 +41,10 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="header">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" height ="100%" align="middle" /></a>
-	</div>
-	<model-viewer src="assets/BeLite_Drafting_Chair.gltf" 
+<div id="header">
+  <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width ="100%" align="middle" /></a>
+  </div>
+<model-viewer src="assets/BeLite_Drafting_Chair.gltf" 
                 ios-src="assets/BeLite_Drafting_Chair.usdz"
                 ar
                 auto-rotate 
