--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 	<div id="header">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width ="100%" align="middle" /></a>
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
 	<br>
 	<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
