--- a/jac-side-architectural.html
+++ b/jac-side-architectural.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 	<div id="header">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" width ="100%" align="middle" /></a>
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
 	<model-viewer src="assets/MR_Jac_Side_Architectural.gltf" 
                 ios-src="assets/MR_Jac_Side_Architectural.usdz"
