Kissen Meet implemented

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
   <!-- 💁 OPTIONAL: Include prismatic.js for Magic Leap support -->
   <!--<script src="https://unpkg.com/@magicleap/prismatic@0.18.2/prismatic.min.js"></script>-->
 
-<style type="text/css">
-</style>
+<style type="text/css"></style>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
@@ -44,7 +43,6 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<br>
 	<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
                 ios-src="assets/ZenithVR_Logo_3D.usdz"
                 ar
@@ -64,8 +62,8 @@
     <tr>
       <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
         <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
+      <td align="center"><img src="assets/images/Kissen Table.jpg" width="164" height="123" alt=""/><br>
+      <span style="font-family: 'Futura Bold font'">KISSEN MEETING TABLE</span></td>
     </tr>
     <tr>
       <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
