--- a/kissen-meet.html
+++ b/kissen-meet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZENITH Interiors - BeLite Drafting Chair - Model Viewer</title>
+  <title>ZENITH Interiors - Kissen Meeting Table - Model Viewer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -44,13 +44,13 @@
 <div id="header">
   <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
   </div>
-<model-viewer src="assets/BeLite_Drafting_Chair.gltf" 
-                ios-src="assets/BeLite_Drafting_Chair.usdz"
+<model-viewer src="assets/Kissen_Meet.gltf" 
+                ios-src="assets/Kissen_Meet.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a chair" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'"> BELITE DRAFTING CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/BeLite_Drafting_Chair.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+                alt="A 3D model of a meeting table" background-color="#70BCD1"> </model-viewer>
+	<p style="font-family: 'Futura Bold font'"> KISSEN MEETING TABLE - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/Kissen_Meet.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
