--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <tr>
       <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
         <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
-      <td align="center"><img src="assets/images/Kissen Table.jpg" width="164" height="123" alt=""/><br>
+      <td align="center"><a href="kissen-meet.html"><img src="assets/images/Kissen Table.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">KISSEN MEETING TABLE</span></td>
     </tr>
     <tr>
