Added Be and Jac

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <body>
 	<div id="header">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /><br></a>
 	</div>
-	<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
+<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
                 ios-src="assets/ZenithVR_Logo_3D.usdz"
                 ar
                 auto-rotate 
@@ -56,20 +56,32 @@
     <tr>
       <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
   EPIC PLUS</p></td>
-      <td align="center"><a href="jac-side-architectural.html"><img src="assets/images/JAC Architectural Side.jpg" width="164" height="123" alt=""/></a><br>
-      <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
-    </tr>
-    <tr>
-      <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
-        <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
       <td align="center"><a href="kissen-meet.html"><img src="assets/images/Kissen Table.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">KISSEN MEETING TABLE</span></td>
     </tr>
     <tr>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
-      <td align="center"><img src="assets/images/JAC Architectural Stool.jpg" width="164" height="123" alt=""/><br>
-      <span style="font-family: 'Futura Bold font'">PLACEHOLDER</span></td>
+      <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
+        <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
+      <td align="center"><p style="font-family: 'Futura Bold font'"><a href="be-chair.html"><img src="assets/images/Be Chair.jpg" width="164" height="123" alt=""/><br>
+      </a>BE TASK CHAIR</p></td>
+    </tr>
+    <tr>
+      <td align="center"><a href="jac-side-architectural.html"><img src="assets/images/JAC Architectural Side.jpg" width="164" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
+      <td align="center"><a href="jac-sled.html"><img src="assets/images/JAC Sled.jpg" width="164" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">JAC SLED</span></td>
+    </tr>
+    <tr>
+      <td align="center">&nbsp;</td>
+      <td align="center">&nbsp;</td>
+    </tr>
+    <tr>
+      <td align="center">&nbsp;</td>
+      <td align="center">&nbsp;</td>
+    </tr>
+    <tr>
+      <td align="center">&nbsp;</td>
+      <td align="center">&nbsp;</td>
     </tr>
   </tbody>
 </table>
