--- a/edo-meet.html
+++ b/edo-meet.html
@@ -44,7 +44,7 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<model-viewer src="assets/EDO_Meet.gltf" 
+	<model-viewer src="assets/EDO_Meet.glb" 
                 ios-src="assets/EDO_Meet.usdz"
                 ar
                 auto-rotate 
