--- a/pta-wst001.html
+++ b/pta-wst001.html
@@ -51,6 +51,6 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="Sit-to-stand Workstation" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'">ELECTRIC HEIGHT ADJUSTABLE WORKSTATION - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/PTA_WST001.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'">ELECTRIC HEIGHT ADJUSTABLE WORKSTATION - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/PTA_WST001.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
