Major update w/ additions

--- a/index.html
+++ b/index.html
@@ -54,27 +54,50 @@
 <table width="375" border="0" align="center">
   <tbody>
     <tr>
-      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
-  EPIC PLUS</p></td>
+      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="kissen-meet.html"><img src="assets/images/Rumba.jpg" width="164" height="123" alt=""/></a><br>
+        RUMBA WORKSTATION
+      </p></td>
       <td align="center"><a href="kissen-meet.html"><img src="assets/images/Kissen Table.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">KISSEN MEETING TABLE</span></td>
     </tr>
     <tr>
-      <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
-        <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
-      <td align="center"><p style="font-family: 'Futura Bold font'"><a href="be-chair.html"><img src="assets/images/Be Chair.jpg" width="164" height="123" alt=""/><br>
+      <td align="center"><a href="belite.html"><img src="assets/images/BeLite Chair No Arms.png" alt="" width="67"  height="120"/></a><br>
+        <span style="font-family: 'Futura Bold font'">BELITE  CHAIR</span></td>
+      <td align="center"><p style="font-family: 'Futura Bold font'"><a href="be-chair.html"><img src="assets/images/Be No Arms.png" width="89" height="122"><br>
       </a>BE TASK CHAIR</p></td>
+    </tr>
+    <tr>
+      <td align="center"><a href="jac-sled.html"><img src="assets/images/JAC Sled.jpg" width="164" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">JAC SIDE SLED</span></td>
+      <td align="center"><a href="jac-upholstered.html"><img src="assets/images/JAC Sled Cushioned.jpg.png" width="123" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">JAC SIDE SLED<br>
+      (UPHOLSTERED)</span></td>
+    </tr>
+    <tr>
+      <td align="center"><a href="jac-stool.html"><img src="assets/images/JAC Stool Sled.jpg" width="164" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">JAC SLED STOOL</span></td>
+      <td align="center"><a href="edo-meet-custom.html"><img src="assets/images/EDO Meet.jpg" width="164" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">EDO MEET</span></td>
+    </tr>
+    <tr>
+      <td align="center"><br>
+      <br>
+      <br>
+      <br>
+      <br>
+<br></td>
+      <td align="center">&nbsp;</td>
     </tr>
     <tr>
       <td align="center"><a href="jac-side-architectural.html"><img src="assets/images/JAC Architectural Side.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">JAC SIDE ARCITECTURAL</span></td>
-      <td align="center"><a href="jac-sled.html"><img src="assets/images/JAC Sled.jpg" width="164" height="123" alt=""/></a><br>
-      <span style="font-family: 'Futura Bold font'">JAC SLED</span></td>
+      <td align="center"><span style="font-family: 'Futura Bold font'"><a href="epic-plus.html"><img src="assets/images/Epic Plus.jpg" width="164" height="123" alt=""/></a><br>
+EPIC PLUS</span></td>
     </tr>
     <tr>
+      <td align="center"><a href="belite-drafting.html"><img src="assets/images/BeLite Drafting Chair.jpg" width="164" height="123" alt=""/></a><br>
+      <span style="font-family: 'Futura Bold font'">BELITE DRAFTING CHAIR</span></td>
       <td align="center">&nbsp;</td>
-      <td align="center"><a href="edo-meet.html"><img src="assets/images/EDO Meet.jpg" width="164" height="123" alt=""/></a><br>
-      <span style="font-family: 'Futura Bold font'">EDO MEET</span></td>
     </tr>
     <tr>
       <td align="center">&nbsp;</td>
