--- a/jac-stool.html
+++ b/jac-stool.html
@@ -44,13 +44,13 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<model-viewer src="assets/Jac_Stool.gltf" 
-                ios-src="assets/Jac_Stool.usdz"
+	<model-viewer src="assets/JAC_Stool.gltf" 
+                ios-src="assets/JAC_Stool.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
                 alt="A 3D model of a chair" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'">JAC STOOL - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/Jac_Stool.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'">JAC STOOL - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/JAC_Stool.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
