Updating ALT text and making the homepage more usable

--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 <model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
                 ios-src="assets/ZenithVR_Logo_3D.usdz"
                 ar
-                auto-rotate 
-                camera-controls 
+                auto-rotate  
                 shadow-intensity="1" 
-                alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
+                alt="Zenith VR Logo" background-color="#70BCD1"> </model-viewer>
 
 <table width="375" border="0" align="center">
   <tbody>
