--- a/edo-meet-custom.html
+++ b/edo-meet-custom.html
@@ -50,7 +50,7 @@
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a meeting pod" background-color="#70BCD1"> </model-viewer>
+                alt="EDO Meeting Pod" background-color="#70BCD1"> </model-viewer>
 	<p style="font-family: 'Futura Bold font'">EDO MEET - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/EDO_Meet_Custom.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
