--- a/epic-plus.html
+++ b/epic-plus.html
@@ -50,7 +50,7 @@
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a workstation" background-color="#70BCD1"> </model-viewer>
+                alt="Epic Plus" background-color="#70BCD1"> </model-viewer>
 	<p style="font-family: 'Futura Bold font'"> EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
