--- a/jac-side-architectural.html
+++ b/jac-side-architectural.html
@@ -50,7 +50,7 @@
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a chair" background-color="#70BCD1"> </model-viewer>
+                alt="Jac Side Architectural" background-color="#70BCD1"> </model-viewer>
 	<p style="font-family: 'Futura Bold font'">JAC SIDE ARCHITECTURAL CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/MR_Jac_Side_Architectural.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
