--- a/kissen-meet.html
+++ b/kissen-meet.html
@@ -50,7 +50,7 @@
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a meeting table" background-color="#70BCD1"> </model-viewer>
+                alt="Kissen Meeting Table" background-color="#70BCD1"> </model-viewer>
 	<p style="font-family: 'Futura Bold font'"> KISSEN MEETING TABLE - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/Kissen_Meet.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
