--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <table width="375" border="0" align="center">
   <tbody>
     <tr>
-      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="kissen-meet.html"><img src="assets/images/Rumba.jpg" width="164" height="123" alt=""/></a><br>
+      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="rumba-workstation.html"><img src="assets/images/Rumba.jpg" width="164" height="123" alt=""/></a><br>
         RUMBA WORKSTATION
       </p></td>
       <td align="center"><a href="kissen-meet.html"><img src="assets/images/Kissen Table.jpg" width="164" height="123" alt=""/></a><br>
