Updated pta and index

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
     <tr>
       <td align="center"><a href="jac-sled.html"><img src="assets/images/JAC Sled.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">JAC SIDE SLED</span></td>
-      <td align="center"><a href="jac-upholstered.html"><img src="assets/images/JAC Sled Cushioned.jpg.png" width="123" height="123" alt=""/></a><br>
-      <span style="font-family: 'Futura Bold font'">JAC SIDE SLED<br>
-      (UPHOLSTERED)</span></td>
+      <td align="center"><p><img width="83" height="123" src="index_clip_image002.jpg"><br>
+        <span style="font-family: 'Futura Bold font'">JAC SIDE SLED<br>
+        (CUSHIONED)
+        </span><span style="font-family: 'Futura Bold font'"><br>
+      </span></p></td>
     </tr>
     <tr>
       <td align="center"><a href="jac-stool.html"><img src="assets/images/JAC Stool Sled.jpg" width="164" height="123" alt=""/></a><br>
