--- a/jac-side-architectural.html
+++ b/jac-side-architectural.html
@@ -28,6 +28,8 @@
 
   <!-- 💁 OPTIONAL: Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
   <script src="https://unpkg.com/resize-observer-polyfill@1.5.1/dist/ResizeObserver.js"></script>
+<script src="jquery-mobile/jquery-1.11.1.min.js"></script>
+  <script src="jquery-mobile/jquery.mobile-1.3.0.min.js"></script>
 
   <!-- 💁 OPTIONAL: Fullscreen polyfill is required for experimental AR features in Canary -->
   <!--<script src="https://unpkg.com/fullscreen-polyfill@1.0.2/dist/fullscreen.polyfill.js"></script>-->
@@ -36,14 +38,55 @@
   <!--<script src="https://unpkg.com/@magicleap/prismatic@0.18.2/prismatic.min.js"></script>-->
 
 <style type="text/css">
+@import url("styles.css");
 </style>
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
-<link href="styles.css" rel="stylesheet" type="text/css">
+<link href="jquery-mobile/jquery.mobile.structure-1.3.0.min.css" rel="stylesheet" type="text/css">
+<script>
+var isMobile = {
+    Android: function() {
+        return navigator.userAgent.match(/Android/i);
+    },
+    BlackBerry: function() {
+        return navigator.userAgent.match(/BlackBerry/i);
+    },
+    iOS: function() {
+        return navigator.userAgent.match(/iPhone|iPad|iPod/i);
+    },
+    Opera: function() {
+        return navigator.userAgent.match(/Opera Mini/i);
+    },
+    Windows: function() {
+        return navigator.userAgent.match(/IEMobile/i);
+    },
+    any: function() {
+        return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
+    }
+};
+if(isMobile.iOS()){
+	$(document).ready(function() {
+       $('#ios-link').css("visibility", "visible");
+		$('#android-link').css("visibility", "hidden");
+	});
+};
+if(isMobile.Android()){ 
+		$(document).ready(function() {
+       $('#ios-link').css("visibility", "hidden");
+		$('#android-link').css("visibility", "visible");
+		});
+};
+if(!isMobile.Android() && !isMobile.iOS()){
+			$(document).ready(function() {
+       $('#android-link').css("visibility", "hidden");
+		$('#ios-link').css("visibility", "hidden");
+			});
+};
+</script>
 </head>
 <body>
-	<div id="header">
+<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
-	</div>
+</div>
 	<model-viewer src="assets/MR_Jac_Side_Architectural.gltf" 
                 ios-src="assets/MR_Jac_Side_Architectural.usdz"
                 ar
@@ -51,6 +94,6 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="Jac Side Architectural" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'">JAC SIDE ARCHITECTURAL CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/MR_Jac_Side_Architectural.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+<p style="font-family: 'Futura Bold font'">JAC SIDE ARCHITECTURAL CHAIR - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/MR_Jac_Side_Architectural.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;" id="android-link">SEE IT IN AUGMENTED REALITY</a><br><a href="assets/MR_Jac_Side_Architectural.usdz" id="ios-link">SEE IT IN AUGMENTED REALITY</a></p>
 </body>
 </html>
