Updated links and images in index

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <tr>
       <td align="center"><a href="jac-sled.html"><img src="assets/images/JAC Sled.jpg" width="164" height="123" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">JAC SIDE SLED</span></td>
-      <td align="center"><p><img width="83" height="123" src="index_clip_image002.jpg"><br>
+      <td align="center"><p><a href="jac-upholstered.html"><img width="83" height="123" src="index_clip_image002.jpg"></a><br>
         <span style="font-family: 'Futura Bold font'">JAC SIDE SLED<br>
         (CUSHIONED)
         </span><span style="font-family: 'Futura Bold font'"><br>
