Added AR info to index page

--- a/index.html
+++ b/index.html
@@ -43,13 +43,16 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /><br></a>
 	</div>
-<model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
+<h2>
+  <model-viewer src="assets/ZenithVR_Logo_3D.gltf" 
                 ios-src="assets/ZenithVR_Logo_3D.usdz"
                 ar
                 auto-rotate  
                 shadow-intensity="1" 
                 alt="Zenith VR Logo" background-color="#70BCD1"> </model-viewer>
-
+      
+  <span style="font-family: 'Futura Bold font'; align: center;">START AUGMENTED REALITY BY TAPPING THE <img src="assets/images/AR Icon.png" alt="" width="25"/> ICON</span><br>
+</h2>
 <table width="375" border="0" align="center">
   <tbody>
     <tr>
