--- a/edo-meet.html
+++ b/edo-meet.html
@@ -51,6 +51,8 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="EDO Meeting Pod" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'">EDO MEET - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/EDO_Meet.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'">EDO MEET - 
+<!--		<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/EDO_Meet.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a>-->
+	</p>
 </body>
 </html>
