--- a/epic-plus.html
+++ b/epic-plus.html
@@ -96,7 +96,11 @@ if(!isMobile.Android() && !isMobile.iOS()){
                 camera-controls 
                 shadow-intensity="1" 
                 alt="Epic Plus" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'"> EPIC PLUS - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;" id="android-link" >SEE IT IN AUGMENTED REALITY</a> <br>
-    <a href="assets/MR_Epic.usdz" rel="ar" id="ios-link" ><img src="assets/images/ar-button.png" alt="" width="248" height="28"/></a></p>
+	<p style="font-family: 'Futura Bold font'"> EPIC PLUS 
+<!--
+		<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/zenith-ar/assets/MR_Epic.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;" id="android-link" >SEE IT IN AUGMENTED REALITY</a> <br>
+    <a href="assets/MR_Epic.usdz" rel="ar" id="ios-link" ><img src="assets/images/ar-button.png" alt="" width="248" height="28"/></a>
+-->
+	</p>
 </body>
 </html>
