--- a/jac-upholstered.html
+++ b/jac-upholstered.html
@@ -51,6 +51,8 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="JAC Sled Upholstered" background-color="#70BCD1"> </model-viewer>
-	<p style="font-family: 'Futura Bold font'">JAC SIDE SLED W/ UPHOLSTERED SEAT - <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/Jac_Sled_Custom.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a></p>
+	<p style="font-family: 'Futura Bold font'">JAC SIDE SLED W/ UPHOLSTERED SEAT 
+<!--		<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/Jac_Sled_Custom.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a>-->
+	</p>
 </body>
 </html>
