added analytics to homepage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
   <!-- 💁 OPTIONAL: Include prismatic.js for Magic Leap support -->
   <!--<script src="https://unpkg.com/@magicleap/prismatic@0.18.2/prismatic.min.js"></script>-->
-
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101260552);</script>
+<script async src="//static.getclicky.com/js"></script>
 <style type="text/css"></style>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link href="webfonts/Futura_Bold_font/stylesheet.css" rel="stylesheet" type="text/css">
