pta new revision

--- a/pta-wst001.html
+++ b/pta-wst001.html
@@ -44,15 +44,15 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<model-viewer src="assets/PTA_WST001.glb" 
-                ios-src="assets/PTA_WST001.usdz"
+	<model-viewer src="assets/PTA_WST001_REV2_SCREEN.glb" 
+                ios-src="assets/PTA_WST001_REV2_SCREEN.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
                 alt="Sit-to-stand Workstation" background-color="#70BCD1"> </model-viewer>
 	<p style="font-family: 'Futura Bold font'">ELECTRIC HEIGHT ADJUSTABLE WORKSTATION
-<!--		<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/PTA_WST001.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a>-->
+<!--		<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/PTA_WST001_REV2_SCREEN.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a>-->
 	</p>
 </body>
 </html>
