--- a/pta-wst001-open.html
+++ b/pta-wst001-open.html
@@ -44,8 +44,8 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<model-viewer src="assets/PTA_WST001_Open_Repo.glb" 
-                ios-src="assets/PTA_WST001_Open_Repo.usdz"
+	<model-viewer src="assets/PTA_WST001.glb" 
+                ios-src="assets/PTA_WST001.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
