--- a/remix.html
+++ b/remix.html
@@ -44,8 +44,8 @@
 	<div id="header">
     <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<model-viewer src="assets/remix.glb" 
-                ios-src="assets/remix.usdz"
+	<model-viewer src="assets/Remix.glb" 
+                ios-src="assets/Remix.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
