--- a/telstra-epic.html
+++ b/telstra-epic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZENITH Interiors - Services Australia - Epic Desk</title>
+  <title>ZENITH Interiors - Telstra - Epic Desk</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -42,10 +42,10 @@
 </head>
 <body>
 	<div id="header">
-    <a href="services-australia.html"><img src="assets/images/ZENITH-Logo+ServicesAustralia-Logo.png" alt="" align="middle" /></a>
+    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
 	</div>
-	<model-viewer src="assets/DHS/Epic.glb" 
-                ios-src="assets/DHS/Epic.usdz"
+	<model-viewer src="assets/Telstra/Epic.glb" 
+                ios-src="assets/Telstra/Epic.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
