--- a/anz-orbis.html
+++ b/anz-orbis.html
@@ -51,10 +51,18 @@
                 camera-controls 
                 shadow-intensity="1" 
                 alt="Orbis Workstation Pod" background-color="#70BCD1"> </model-viewer>
-  <p style="font-family: 'Futura Bold font'; text-align: right;">SEE IT IN AR <img src="assets/images/arrow.png" style="width:20px;height:20px;"/>
+  
+                <table width="100%">
+                  <tbody>
+                  <tr>
+                  <td><p style="font-family: 'Futura Bold font'">ORBIS HEIGHT ADJUSTABLE WORKSTATION POD</p></td>
+                  <td><p style="font-family: 'Futura Bold font'; text-align: right;">SEE IT IN AR <img src="assets/images/arrow.png" style="width:20px;height:20px;"/></td>
+
+                  </tr>
+                  </tbody>
+                  </table>
+  
   </p>
-  <p style="font-family: 'Futura Bold font'">ORBIS HEIGHT ADJUSTABLE WORKSTATION POD
-<!--		<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://zenith-interiors.github.io/ar/assets/PTA_WST001_REV2_SCREEN.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">SEE IT IN AUGMENTED REALITY</a>-->
-	</p>
+
 </body>
 </html>
