--- a/nab-digibar.html
+++ b/nab-digibar.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="header">
-    <a href="index.html"><img src="assets/images/ZENITH-Logo-90k.png" alt="" align="middle" /></a>
+    <a href="nab-landing.html"><img src="assets/images/ZENITH-Logo+NAB-Logo.png" alt="" align="middle" /></a>
 	</div>
 	<model-viewer src="assets/NAB/T3A_Digibar_Kissen.glb" 
                 ios-src="assets/NAB/T3A_Digibar_Kissen.usdz"
