--- a/nab-landing.html
+++ b/nab-landing.html
@@ -57,8 +57,8 @@
 <table width="375" border="0" align="center">
   <tbody>
     <tr>
-      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="nab-semi-discrete.html"><img src="assets/images/NAB/semi.JPG" width="160" height="160" alt=""/></a><br>
-        SEMI DISCRETE
+      <td width="50%" height="144" align="center"><p style="font-family: 'Futura Bold font'"><a href="nab-semi-discreet.html"><img src="assets/images/NAB/semi.JPG" width="160" height="160" alt=""/></a><br>
+        SEMI DISCREET
       </p></td>
       <td align="center"><a href="nab-suspended-planter.html"><img src="assets/images/NAB/planter.JPG" width="160" height="160" alt=""/></a><br>
       <span style="font-family: 'Futura Bold font'">SUSPENDED PLANTER</span></td>
