--- a/nab-suspended-planter.html
+++ b/nab-suspended-planter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZENITH Interiors - NAB - J05A Suspended Planter</title>
+  <title>ZENITH Interiors - NAB - J.05A Suspended Ceiling Planter</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -56,7 +56,7 @@
                 <table width="100%">
                   <tbody>
                   <tr>
-                  <td><p style="font-family: 'Futura Bold font'">J05A SUSPENDED PLANTER</p></td>
+                  <td><p style="font-family: 'Futura Bold font'">J.05A SUSPENDED CEILING PLANTER</p></td>
                   <td><p style="font-family: 'Futura Bold font'; text-align: right;">SEE IT IN AR <img src="assets/images/arrow.png" style="width:20px;height:20px;"/></td>
 
                   </tr>
