--- a/nab-digibar.html
+++ b/nab-digibar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZENITH Interiors - NAB - T3A Digibar</title>
+  <title>ZENITH Interiors - NAB - T3A Digi Bar</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -56,7 +56,7 @@
                 <table width="100%">
                   <tbody>
                   <tr>
-                  <td><p style="font-family: 'Futura Bold font'">T3A DIGIBAR</p></td>
+                  <td><p style="font-family: 'Futura Bold font'">T3A DIGI BAR - KISSEN</p></td>
                   <td><p style="font-family: 'Futura Bold font'; text-align: right;">SEE IT IN AR <img src="assets/images/arrow.png" style="width:20px;height:20px;"/></td>
 
                   </tr>
