--- a/nab-semi-discreet.html
+++ b/nab-semi-discreet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZENITH Interiors - NAB - J03 Semi Discrete</title>
+  <title>ZENITH Interiors - NAB - J03 Semi Discreet</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -51,12 +51,12 @@
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="Semi Discrete" background-color="#70BCD1"> </model-viewer>
+                alt="Semi Discreet" background-color="#70BCD1"> </model-viewer>
   
                 <table width="100%">
                   <tbody>
                   <tr>
-                  <td><p style="font-family: 'Futura Bold font'">J03 SEMI DISCRETE</p></td>
+                  <td><p style="font-family: 'Futura Bold font'">J.03 SEMI DISCREET + T5 SEMI DISCREET TABLE</p></td>
                   <td><p style="font-family: 'Futura Bold font'; text-align: right;">SEE IT IN AR <img src="assets/images/arrow.png" style="width:20px;height:20px;"/></td>
 
                   </tr>
